# dart

./: .gitignore  README.md  pyproject.toml
docs/: CONTRACTS_AND_OUTPUTS.md  IMPLEMENTATION_SCOPE.md  PLAN_DRAFT.md  SPEC.md  STEP6_API_USAGE.md  STEP6_PLAN_DRAFT.md  TRACK_C_PHASE1.md  WORKER_REVIEWER_EXEC_PLAN.md
src/dart_pipeline/: __init__.py  cli.py  contracts.py  corp_code_db.py  dart_api.py  pipeline_step6.py
src/dart_pipeline/routing/: __init__.py  coverage_router.py  track_c_routing.py
src/dart_pipeline/timeseries/: __init__.py  restatement.py
src/dart_pipeline/track_c/: __init__.py  xbrl_parser.py
src/dart_pipeline/validation/: __init__.py  tieout.py
tests/: test_cli_smoke.py  test_contracts.py  test_corp_code_db.py  test_coverage_router.py  test_dart_api.py  test_no_network_regression.py  test_pipeline_step6.py  test_public_exports.py  test_restatement.py  test_step6_e2e_golden.py  test_tieout.py  test_track_c_routing.py  test_xbrl_parser.py
tests/fixtures/golden/: track_a_snapshot_offline_00126380_2024.json
tests/fixtures/track_c/basic_bundle/: entity00134477_2025-12-31_lab-en.xml  entity00134477_2025-12-31_lab-ko.xml  entity00134477_2025-12-31_pre.xml
