[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "dart-pipeline"
version = "0.1.0"
description = "Run-1 DART pipeline contracts and scaffold"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "defusedxml>=0.7,<1.0",
  "openpyxl>=3.1,<4.0",
  "pydantic>=2.7,<3.0",
  "requests>=2.31,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
